# realsense-yolov8-nitros-bridge

./: CMakeLists.txt  README.md  package.xml
config/: realsense_640x480x60.json  realsense_640x480x60.yaml
launch/: isaac_ros_yolov8_realsense.launch.py
src/: nitros_realsense_bridge_node.cpp
